<resources>
    <string name="app_name">Meetme</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="tv_login">LOGIN</string>
    <string name="btn_login">LOGIN</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="et_firstname">Firstname</string>
    <string name="et_lastname">Lastname</string>
    <string name="tv_register">Don\'t have account? Register</string>
    <string name="tv_login_1">Already have account? Login</string>
    <string name="tv_register_1">REGISTER</string>
    <string name="tv_newmeetup">NEW MEETUP</string>
    <string name="tv_friend">Friend</string>
    <string name="tv_description">Description</string>
    <string name="tv_submit">SUBMIT</string>
    <string name="tv_myreports">My Reports</string>
    <string name="tv_logout">LOGOUT</string>
    <string name="tv_meetup">MEETUP</string>
    <string name="tv_back">BACK</string>
    <string name="tv_delete">DELETE</string>
    <string name="tv_mymeetups">My MEETUPS</string>
    <string name="tv_emptymeetups">No Meetup found, please add one…</string>

</resources>